# awesome-fastapi-ai

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: __init__.py  health.py
app/core/: config.py
app/websocket/: manager.py
examples/faiss_search/: main.py
examples/langchain_chatbot/: main.py
examples/yolov11_detection/: main.py
